<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.kat.cpen321_ineed.ScrollingActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/addPostButton"
                        android:layout_width="0dp"
                        android:layout_weight="0.25"
                        android:layout_height="wrap_content"
                        android:text="+" />

                    <Button
                        android:id="@+id/buttonViewOffer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="MESSAGES" />

                    <Button
                        android:id="@+id/logoutButton"
                        android:layout_width="0dp"
                        android:layout_weight="0.25"
                        android:layout_height="wrap_content"
                        android:text="Logout" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <CheckBox
                        android:id="@+id/checkboxOwned"
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:layout_weight="0.15"
                        android:text="Mine" />

                    <EditText
                        android:id="@+id/editTextSearch"
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:hint="Search" />

                    <Button
                        android:id="@+id/buttonSearch"
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:layout_weight="0.2"
                        android:text="Search" />

                </LinearLayout>

            </LinearLayout>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_scrolling"
        android:id="@+id/include6" /><![CDATA[

    Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_anchor="@+id/include6" />

]]>
</android.support.design.widget.CoordinatorLayout>